; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/bectl/extr_bectl_list.c_get_origin_props.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/bectl/extr_bectl_list.c_get_origin_props.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"origin\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [51 x i8] c"bectl list: failed to allocate origin prop nvlist\0A\00", align 1
@be = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [47 x i8] c"bectl list: failed to fetch origin properties\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32**)* @get_origin_props to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_origin_props(i32* %0, i32** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @nvlist_lookup_string(i32* %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %6)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %2
  %11 = load i32**, i32*** %5, align 8
  %12 = call i64 @be_prop_list_alloc(i32** %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  store i8* null, i8** %3, align 8
  br label %30

17:                                               ; preds = %10
  %18 = load i32, i32* @be, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = load i32**, i32*** %5, align 8
  %21 = load i32*, i32** %20, align 8
  %22 = call i64 @be_get_dataset_props(i32 %18, i8* %19, i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %17
  %25 = load i32, i32* @stderr, align 4
  %26 = call i32 @fprintf(i32 %25, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0))
  store i8* null, i8** %3, align 8
  br label %30

27:                                               ; preds = %17
  %28 = load i8*, i8** %6, align 8
  store i8* %28, i8** %3, align 8
  br label %30

29:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %30

30:                                               ; preds = %29, %27, %24, %14
  %31 = load i8*, i8** %3, align 8
  ret i8* %31
}

declare dso_local i64 @nvlist_lookup_string(i32*, i8*, i8**) #1

declare dso_local i64 @be_prop_list_alloc(i32**) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i64 @be_get_dataset_props(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
